--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,9 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "nunomaduro/collision": "^5.0 || ^6.0 || ^7.0",
+        "nunomaduro/collision": "^5.0 || ^6.0 || ^7.0 || ^8.0",
         "nunomaduro/larastan": "^1.0 || ^2.0",
-        "orchestra/testbench": "^6.0 || ^7.0 || ^8.0",
-        "phpstan/phpstan": "^1.0",
+        "orchestra/testbench": "^6.0 || ^7.0 || ^8.0 || ^9.0",
         "phpunit/phpunit": "^9.6 || ^10.0"
     },
     "minimum-stability": "dev",
