--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,20 @@
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
-        "laravel/nova": "^4.0"
+        "laravel/nova": "^4.0 || ^5.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
         "nunomaduro/collision": "^5.0 || ^6.0 || ^7.0 || ^8.0",
-        "nunomaduro/larastan": "^1.0 || ^2.0",
+        "larastan/larastan": "^1.0 || ^2.0",
         "orchestra/testbench": "^6.0 || ^7.0 || ^8.0 || ^9.0",
         "phpunit/phpunit": "^9.6 || ^10.0"
+    },
+    "repositories": {
+        "nova": {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
